compile_tests/expected/fns.stderr
error: unsupported pattern
 --> compile_tests/src/fns.rs:5:40
  |
5 |     fn func_with_invalid_param_pattern((a, b): (f32, f32)) -> (f32, f32) {
  |                                        ^^^^^^

error: unsupported expression
 --> compile_tests/src/fns.rs:6:9
  |
6 |         (a, b)
  |         ^^^^^^

error: unsupported parameter
 --> compile_tests/src/fns.rs:9:23
  |
9 |     fn func_with_self(self) {}
  |                       ^^^^

error: unsupported generic param
  --> compile_tests/src/fns.rs:11:27
   |
11 |     fn func_with_lifetime<'a, const N: usize>() {}
   |                           ^^

error: unsupported generic param
  --> compile_tests/src/fns.rs:11:31
   |
11 |     fn func_with_lifetime<'a, const N: usize>() {}
   |                               ^^^^^

error: `self` parameter is only allowed in associated functions
 --> compile_tests/src/fns.rs:9:23
  |
9 |     fn func_with_self(self) {}
  |                       ^^^^ not semantically valid as function parameter
  |
  = note: associated functions are those in `impl` or `trait` definitions

error[E0277]: the trait bound `(f32, f32): GpuType` is not satisfied
  --> compile_tests/src/fns.rs:5:63
   |
5  |     fn func_with_invalid_param_pattern((a, b): (f32, f32)) -> (f32, f32) {
   |                                                               ^^^^^^^^^^ the trait `GpuType` is not implemented for `(f32, f32)`
   |
   = help: the following other types implement trait `GpuType`:
             bool
             f32
             i32
             u32

error[E0308]: mismatched types
 --> compile_tests/src/fns.rs:6:9
  |
5 |     fn func_with_invalid_param_pattern((a, b): (f32, f32)) -> (f32, f32) {
  |                                                               ---------- expected `Gpu<(f32, f32), Mut>` because of return type
6 |         (a, b)
  |         ^^^^^^ expected `Gpu<(f32, f32), Mut>`, found `(f32, f32)`
  |
  = note: expected struct `Gpu<(f32, f32), Mut>`
              found tuple `(f32, f32)`
